# carob-testing

./: .clang-format  .clang-tidy  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE.txt  README.md
data/areas/: basement.json  bigtree.json  cave01.json  grove01.json  grove04.json  grove06.json  grove_house.json  secret_room.json
data/areas/tiles/: baum.bmp.json  cave.bmp.json  forest.bmp.json  indoors.bmp.json  indoors_2.bmp.json  objects.bmp.json
data/entities/clouds/: cloud1.json  cloud2.json  cloud3.json  cloud4.json
data/entities/player/: player.json
data/entities/wizard/: wizard.json
src/ai/: ai-wander.cpp  ai-wander.h
src/areas/: big-tree.cpp  big-tree.h  cave01.cpp  cave01.h  grove-house.cpp  grove-house.h  grove01.cpp  grove01.h  grove04.cpp  grove04.h  grove06.cpp  grove06.h  secret-room.cpp  secret-room.h
src/world/: clouds.cpp  clouds.h  world.cpp
